--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="colorPrimary">#4ECCA3</color> <!-- Color primario -->
+    <color name="colorPrimaryDark">#2D6A4F</color> <!-- Color primario oscuro -->
+    <color name="colorAccent">#E9C46A</color> <!-- Color de acento -->
+    <color name="colorBackground">#F0ECE3</color> <!-- Color de fondo -->
+    <color name="colorText">#2B2D42</color> <!-- Color de texto -->
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#FFFFFFFF</color>
+
 </resources>
