--- a/app/src/main/res/layout/activity_vicente.xml
+++ b/app/src/main/res/layout/activity_vicente.xml
@@ -6,4 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".Vicente">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="416dp"
+        android:layout_height="684dp"
+        android:layout_marginBottom="52dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondo_vicente_mis_cocos" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="243dp"
+        android:layout_height="454dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="136dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/tronco_vicente_photoroom_png_photoroom" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="208dp"
+        android:layout_height="149dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="128dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="197dp"
+        android:layout_height="155dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="128dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
