--- a/app/src/main/res/layout/activity_vicente.xml
+++ b/app/src/main/res/layout/activity_vicente.xml
@@ -7,12 +7,12 @@
     tools:context=".Vicente">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="416dp"
-        android:layout_height="684dp"
-        android:layout_marginBottom="52dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView4"
+        android:layout_width="417dp"
+        android:layout_height="672dp"
+        android:layout_marginBottom="5dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,8 +22,8 @@
         android:id="@+id/imageButton6"
         android:layout_width="243dp"
         android:layout_height="454dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,26 +32,41 @@
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="208dp"
-        android:layout_height="149dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="128dp"
+        android:layout_width="222dp"
+        android:layout_height="168dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="124dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
         app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
 
     <ImageButton
         android:id="@+id/imageButton5"
-        android:layout_width="197dp"
-        android:layout_height="155dp"
+        android:layout_width="187dp"
+        android:layout_height="161dp"
         android:layout_marginEnd="68dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginBottom="124dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageButton6"
         app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="399dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
