--- a/app/src/main/res/layout/activity_vicente.xml
+++ b/app/src/main/res/layout/activity_vicente.xml
@@ -64,6 +64,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="11dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
