--- a/app/src/main/res/layout/activity_succesful_register.xml
+++ b/app/src/main/res/layout/activity_succesful_register.xml
@@ -4,15 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CFCFCF"
     tools:context=".SuccesfulRegister">
 
     <TextView
         android:id="@+id/UserTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="220dp"
-        android:layout_marginBottom="660dp"
+        android:layout_marginEnd="188dp"
+        android:layout_marginBottom="632dp"
+        android:fontFamily="@font/abril_fatface"
+        android:gravity="center"
+        android:textColor="#000000"
         android:textSize="20sp"
+
+        app:autoSizeMaxTextSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -22,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="43dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -30,9 +37,13 @@
         android:id="@+id/BackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="54dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="sans-serif-black"
         android:text="Volver"
+        android:textColor="#CFCFCF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -42,8 +53,12 @@
         android:layout_height="45dp"
         android:layout_marginStart="144dp"
         android:layout_marginEnd="176dp"
-        android:layout_marginBottom="464dp"
+        android:layout_marginBottom="444dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="sans-serif-black"
         android:text="Mostrar Horario"
+        android:textColor="#CFCFCF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.306"
@@ -53,22 +68,28 @@
         android:id="@+id/NotificacionesProfesoresButton"
         android:layout_width="163dp"
         android:layout_height="46dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginBottom="392dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="68dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="sans-serif-black"
         android:text="Notificaciones "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textColor="#CFCFCF"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MostrarHorarioButton" />
 
     <Button
         android:id="@+id/VicenteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="167dp"
-        android:layout_marginEnd="154dp"
-        android:layout_marginBottom="305dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="84dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="sans-serif-black"
         android:text="Anular Matricula"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="#CFCFCF"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NotificacionesProfesoresButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
