--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#CFCFCF"
     android:padding="16dp">
 
     <TextView
@@ -13,6 +14,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:text="Título de la Notificación"
         app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/timestampTextView" />
 
@@ -21,6 +23,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Mensaje de la notificación"
+        android:fontFamily="sans-serif-black"
+
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -30,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hora"
+        android:fontFamily="sans-serif-black"
         app:layout_constraintTop_toTopOf="@+id/titleTextView"
         app:layout_constraintEnd_toEndOf="parent" />
 
