--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,15 @@
             android:layout_height="64dp"
             android:layout_gravity="center"
             android:layout_marginTop="80dp"
-            android:layout_marginEnd="112dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/button_background"
             android:fontFamily="sans-serif-black"
             android:text="Registrar"
             android:textColor="#CFCFCF"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/SignInButton"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/AppNameText"
             app:rippleColor="#FFFFFF" />
 
@@ -47,13 +49,15 @@
             android:layout_height="69dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="96dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/button_background"
             android:fontFamily="sans-serif-black"
             android:text="Iniciar sesión"
             android:textColor="#CFCFCF"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />
 
 
@@ -62,58 +66,72 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="147dp"
             android:layout_marginBottom="284dp"
             android:text="Username"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/UsernameEditText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/SignInButton" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="106dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="143dp"
             android:layout_marginBottom="204dp"
             android:text="Password"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/PasswordEditText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/UsernameEditText" />
 
         <EditText
             android:id="@+id/UsernameEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="100dp"
             android:layout_marginBottom="240dp"
             android:ems="10"
             android:inputType="text"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/PasswordEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="100dp"
+            android:layout_marginTop="3dp"
             android:layout_marginBottom="156dp"
             android:ems="10"
             android:inputType="textPassword"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/buttonNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
             android:layout_marginEnd="52dp"
             android:layout_marginBottom="82dp"
             android:text="Next"
             android:textColor="#FFFFFF"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/PasswordEditText"
+            app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />
 
         <Button
             android:id="@+id/HiddenButton"
