--- a/app/src/main/res/layout/activity_vicente.xml
+++ b/app/src/main/res/layout/activity_vicente.xml
@@ -17,30 +17,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/fondo_vicente_mis_cocos" />
 
     <ImageButton
         android:id="@+id/imageButton6"
         android:layout_width="243dp"
         android:layout_height="454dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="81dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/tronco_vicente_photoroom_png_photoroom" />
 
     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="222dp"
         android:layout_height="168dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="144dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
 
     <ImageButton
@@ -48,26 +55,25 @@
         android:layout_width="187dp"
         android:layout_height="161dp"
         android:layout_marginEnd="68dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="136dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.974"
         app:layout_constraintStart_toEndOf="@+id/imageButton6"
         app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="399dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="347dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.578"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
