--- a/app/src/main/res/layout/activity_succesful_register.xml
+++ b/app/src/main/res/layout/activity_succesful_register.xml
@@ -11,23 +11,27 @@
         android:id="@+id/UserTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="188dp"
-        android:layout_marginBottom="632dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="80dp"
         android:fontFamily="@font/abril_fatface"
+
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="20sp"
-
         app:autoSizeMaxTextSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/MostrarHorarioButton"
+        app:layout_constraintEnd_toStartOf="@+id/UserAvatar"
+        app:layout_constraintHorizontal_bias="0.977"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/UserAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="36dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,11 +53,11 @@
 
     <Button
         android:id="@+id/MostrarHorarioButton"
-        android:layout_width="166dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="144dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="444dp"
+        android:layout_width="141dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="428dp"
         android:background="@drawable/button_background"
         android:fontFamily="sans-serif-black"
         android:text="Mostrar Horario"
@@ -61,20 +65,24 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.306"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/UserAvatar" />
 
     <Button
         android:id="@+id/NotificacionesProfesoresButton"
-        android:layout_width="163dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="120dp"
+        android:layout_width="197dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="104dp"
         android:layout_marginTop="68dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/button_background"
         android:fontFamily="sans-serif-black"
         android:text="Notificaciones "
         android:textColor="#CFCFCF"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/VicenteButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MostrarHorarioButton" />
 
@@ -83,12 +91,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="114dp"
         android:background="@drawable/button_background"
         android:fontFamily="sans-serif-black"
         android:text="Anular Matricula"
         android:textColor="#CFCFCF"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/BackButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NotificacionesProfesoresButton" />
 
