--- a/app/src/main/res/layout/activity_vicente.xml
+++ b/app/src/main/res/layout/activity_vicente.xml
@@ -11,7 +11,6 @@
         android:id="@+id/imageView4"
         android:layout_width="417dp"
         android:layout_height="672dp"
-        android:layout_marginBottom="5dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,7 @@
         android:layout_width="222dp"
         android:layout_height="168dp"
         android:layout_marginEnd="88dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginBottom="128dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,25 +54,26 @@
         android:layout_width="187dp"
         android:layout_height="161dp"
         android:layout_marginEnd="68dp"
-        android:layout_marginBottom="136dp"
+        android:layout_marginBottom="132dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.974"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageButton6"
         app:srcCompat="@drawable/cocos_vicente_photoroom_png_photoroom" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="347dp"
+        android:layout_width="334dp"
         android:layout_height="65dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="20dp"
+        android:text="Pulsa los cocos"
         android:textAlignment="center"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
